# Helium

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt
Base/: Helium.Base.cppm
Base/HeliumObject/: Helium.Base.HeliumObject.cppm
Base/HeliumSharedObject/: Helium.Base.HeliumSharedObject.cppm
Base/Test/: Helium.Base.Test.cppm
Base/Version/: Helium.Base.Version.cppm
BuiltinCommands/: Helium.BuiltinCommands.cppm
BuiltinCommands/Implementations/: Helium.BuiltinCommands.Implementations.Config.cppm  Helium.BuiltinCommands.Implementations.Debug.cppm  Helium.BuiltinCommands.Implementations.Misc.cppm  Helium.BuiltinCommands.Implementations.Plugins.cppm  Helium.BuiltinCommands.Implementations.Server.cppm  Helium.BuiltinCommands.Implementations.Utils.cppm  Helium.BuiltinCommands.Implementations.cppm
CLI/: Helium.CLI.cppm
CLI/CLIMainLoop/: Helium.CLI.CLIMainLoop.cppm  Helium.CLI.MainCLILoop.cppm
CLI/MainCLIThread/: Helium.CLI.MainCLIThread.cppm
Commands/: Helium.Commands.cppm
Commands/BindingHelper/: Helium.Commands.BindingHelper.cppm
Commands/BuiltinCommands/: Helium.Commands.BuiltinCommands.cppm
Commands/CommandArgument/: Helium.Commands.CommandArgument.CommandArgumentBase.cppm  Helium.Commands.CommandArgument.CommandArgumentBoolean.cppm  Helium.Commands.CommandArgument.CommandArgumentFloatingPoint.cppm  Helium.Commands.CommandArgument.CommandArgumentGreedyString.cppm  Helium.Commands.CommandArgument.CommandArgumentInteger.cppm  Helium.Commands.CommandArgument.CommandArgumentQuotedString.cppm  Helium.Commands.CommandArgument.CommandArgumentString.cppm  Helium.Commands.CommandArgument.cppm
Commands/CommandBase/: Helium.Commands.CommandBase.cppm
Commands/CommandContext/: Helium.Commands.CommandContext.cppm
Commands/CommandDispatcher/: Helium.Commands.CommandDispatcher.cppm
Commands/CommandExecutionThread/: Helium.Commands.CommandExecutionThread.cppm
Commands/CommandLiteral/: Helium.Commands.CommandLiteral.CommandLiteralBase.cppm  Helium.Commands.CommandLiteral.CommandStringLiteral.cppm  Helium.Commands.CommandLiteral.cppm
Commands/CommandRoot/: Helium.Commands.CommandRoot.cppm
Commands/CommandSource/: Helium.Commands.CommandSource.DefaultCommandSource.cppm  Helium.Commands.CommandSource.cppm
Commands/Concepts/: Helium.Commands.Concepts.cppm
Commands/Lexer/: Helium.Commands.Lexer.cppm
Commands/Parser/: Helium.Commands.Parser.cppm
Commands/Test/: Helium.Commands.Test.cppm
Config/: Helium.Config.cppm
Config/Concepts/: Helium.Config.Concepts.cppm
Config/ConfigImpl/: Helium.Config.ConfigImpl.cppm
Config/ConfigManager/: Helium.Config.ConfigManager.cppm
Config/Mixins/: Helium.Config.Mixins.JSONMixin.cppm  Helium.Config.Mixins.YAMLMixin.cppm  Helium.Config.Mixins.cppm
Config/SharedConfig/: Helium.Config.SharedConfig.cppm
Config/Test/: Helium.Config.Test.cppm
Events/: Helium.Events.cppm
Events/BindingHelper/: Helium.Events.BindingHelper.cppm
Events/Concepts/: Helium.Events.Concepts.cppm
Events/EventBus/: Helium.Events.EventBus.cppm
Events/EventDispatchThread/: Helium.Events.EventDispatchThread.cppm
Events/EventEmitter/: Helium.Events.EventEmitter.cppm
Events/EventEmitterPolicy/: Helium.Events.EventEmitterPolicy.cppm
Events/EventListener/: Helium.Events.EventListener.cppm
Events/EventStream/: Helium.Events.EventStream.cppm
Events/Helium/: Helium.Events.Helium.cppm
Events/ListenerStream/: Helium.Events.ListenerStream.cppm
Events/MainEventLoop/: Helium.Events.MainEventLoop.cppm
Events/Policy/: Helium.Events.Policy.EventEmitterPolicy.cppm  Helium.Events.Policy.EventListenerPolicy.cppm  Helium.Events.Policy.PolicyHelper.cppm  Helium.Events.Policy.cppm
Events/Test/: Helium.Events.Test.cppm
Exceptions/: Helium.Exceptions.cppm
Exceptions/TerminateHandler/: Helium.Exceptions.TerminateHandler.cppm
Logger/: Helium.Logger.cppm
Logger/LoggerImpl/: Helium.Logger.LoggerImpl.cppm
Logger/SharedLogger/: Helium.Logger.SharedLogger.cppm
Logger/Test/: Helium.Logger.Test.cppm
Main/: Helium.Main.cppm
Modules/Module/: Helium.Modules.Module.cppm
Modules/ModuleManager/: Helium.Modules.ModuleManager.cppm
Modules/ModuleMetadata/: Helium.Modules.ModuleMetadata.cppm
Modules/Test/: Helium.Modules.Test.cppm
Parser/: Helium.Parser.cppm
Plugins/: Helium.Plugins.cppm
Plugins/Bindings/: Helium.Plugins.Bindings.Python.cppm  Helium.Plugins.Bindings.cppm
Plugins/Plugin/: Helium.Plugins.PluginInstance.cppm
Plugins/PluginInstance/: Helium.Plugins.PluginInstance.cppm
Plugins/PluginManager/: Helium.Plugins.PluginManager.cppm
Plugins/PluginMetadata/: Helium.Plugins.PluginMetadata.cppm
Plugins/Test/: Helium.Plugins.Test.cppm
Server/: Helium.Server.cppm
Server/BindingHelper/: Helium.Server.BindingHelper.cppm
Server/RCON/: Helium.Server.RCON.cppm
Server/ServerInstance/: Helium.Server.ServerInstance.cppm
Server/ServerOutputParser/: Helium.Server.ServerOutputParser.Arclight.cppm  Helium.Server.ServerOutputParser.Beta18.cppm  Helium.Server.ServerOutputParser.Bukkit.cppm  Helium.Server.ServerOutputParser.BukkitLegacy.cppm  Helium.Server.ServerOutputParser.Bungeecord.cppm  Helium.Server.ServerOutputParser.CatServer.cppm  Helium.Server.ServerOutputParser.Forge.cppm  Helium.Server.ServerOutputParser.PythonCustomParserWrapper.cppm  Helium.Server.ServerOutputParser.ServerOutputInfo.cppm  Helium.Server.ServerOutputParser.Utils.cppm  Helium.Server.ServerOutputParser.Vanilla.cppm  Helium.Server.ServerOutputParser.Velocity.cppm  Helium.Server.ServerOutputParser.Waterfall.cppm  Helium.Server.ServerOutputParser.cppm
Server/ServerOutputProcessThread/: Helium.Server.ServerOutputProcessThread.cppm
Utils/: Helium.Utils.cppm
Utils/OverloadSet/: Helium.Utils.OverloadSet.cppm
Utils/Polymorphic/: Helium.Utils.Polymorphic.cppm
Utils/RText/: Helium.Utils.RText.cppm
Utils/RunLoopExecutor/: Helium.Utils.RunLoopExecutor.cppm
Utils/Test/: Helium.Utils.Test.cppm
